# hmc-vector-arcade

./: .gitignore  README.md
STM32-demo/src/: DMA_USART_main_demo.c
Tests/: helloworld.cpp
bens-vector-gen-demo/: pin_mapping.txt
bens-vector-gen-demo/src/: main.c
chiptunes/: splitter.py  trans.dmp  unleash.dmp
chiptunes/bens-chiptune-demo/: platformio.ini
eng/: .entity.hpp.swp  Makefile  PGA3D.hpp  buff0  main  render.cpp  run.sh  util.cpp  util.hpp
eng/conventional/: '  Makefile  \  buff0  buff1  game.hpp  main  main.cpp  rawio.h  render  render.cpp  run.sh  simulated_io.cpp  test  test.cpp  util.cpp  util.hpp
eng/fancy/: PGA3D.cpp  (+4 more)
game/: .gitignore  Makefile  basics.cpp  basics.h  buff1  enemy.cpp  enemy.h  game.cpp  pbcopy  platformio.ini  player.h  projectile.h  rawio.h  run_game.sh  scene.h  simulated_io.cpp  wrapper.cpp
penguin_game/: .gitignore  Makefile  box.txt  fishSprite.txt  jelly.txt  list_converter.py  mountain1.txt  mountain2.txt  mountain3.txt  mountain4.txt  pengBod.txt  pengBotBod.txt  pengEye.txt  pengFlip.txt  pengFoot.txt  pengHead.txt  pengTail.txt  pengTopBod.txt  pengbody.txt  platformio.ini  sprite_creator  sun.txt  test.txt
pga_demo/: .multivec.py.swp  anim.py  main.py  move_back.html  multivec.py  rotate.html  rotate_across.html  rotate_across_changing_fov.html  rotate_back.html
vector-generator-processor/: Cargo.toml  README.md  platformio.ini
vector-generator-processor/src/: command.rs  lib.rs
vector-simulator/: .gitignore  Cargo.toml  buff0  commands  commands_r  font_demo.py  log.txt  vector-simulator  vsim.py
(+36 files in other folders)
